--- a/atomic/atoms/Button/Button.css
+++ b/atomic/atoms/Button/Button.css
@@ -1,14 +1,15 @@
 .button {
-    border: 1px solid transparent;
+    border: 1px solid  var(--colors-transparent);;
     padding: 10px 85px;
     border-radius: 30px;
-    box-shadow: 0px 4px 5px var(--white-lilac);
+    box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
     cursor: pointer;
+    transition: all 0.5s ease;
 }
 
 .type-primary {
-    background:  var(--medium-purple);
-    color: var(--white);
+    background:   var(--colors-transparent);
+    color: var(--colors-white);
 }
 
 
@@ -24,9 +25,17 @@
 
 
 .type-secondary {
-    background:  transparent;
-    color: var(--medium-purple);
-    border: 1px solid var(--medium-purple);
+    background:   var(--colors-transparent);
+    color: var(--colors-brand-medium-purple);
+    border: 1px solid var(--colors-brand-medium-purple);
 
 }
 
+/* Link  */
+
+.type-tertiary {
+    background: var(--colors-transparent);
+    color: var(--colors-primary);
+    box-shadow: none;
+    padding: 0;
+}
