--- a/atomic/atoms/Button/Button.css
+++ b/atomic/atoms/Button/Button.css
@@ -4,11 +4,12 @@
     border-radius: 30px;
     box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
     cursor: pointer;
+    font-size: var(--font-size-2xl);
     transition: all 0.5s ease;
 }
 
 .type-primary {
-    background:   var(--colors-transparent);
+    background:   var(--colors-brand-medium-purple);
     color: var(--colors-white);
 }
 
@@ -36,6 +37,8 @@
 .type-tertiary {
     background: var(--colors-transparent);
     color: var(--colors-primary);
-    box-shadow: none;
+    box-shadow: var(--shadows-none);
     padding: 0;
+    border-bottom: 1px solid var(--colors-primary);
+    border-radius: var(--border-radius-none);
 }
