--- a/atomic/atoms/Button/Button.css
+++ b/atomic/atoms/Button/Button.css
@@ -1,55 +1,48 @@
 .button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid  var(--colors-transparent);;
-    padding: 10px 20px;
-    border-radius: 30px; /*FIXME use design token*/
-    box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
-    cursor: pointer;
-    font-size: var(--font-size-2xl);
-    transition: all 0.5s ease;
-    max-width: 300px;
-    width: 100%;
-    min-width: max-content;
-    /*TODO Implement min width behaviour*/
-
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--colors-transparent);
+  padding: 10px 20px;
+  border-radius: 30px; /*FIXME use design token*/
+  box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
+  cursor: pointer;
+  font-size: var(--font-size-2xl);
+  transition: all 0.5s ease;
+  max-width: 300px;
+  min-width: max-content;
+  /*TODO Implement min width behaviour*/
 }
 
 .is-block {
-    width: 100%;
+  width: 100%;
 }
 .type-primary {
-    background:   var(--colors-brand-medium-purple);
-    color: var(--colors-white);
+  background: var(--colors-brand-medium-purple);
+  color: var(--colors-white);
 }
-
 
 .button:hover {
-    filter:brightness(1.1) 
+  filter: brightness(1.1);
 }
-
 
 .button:active {
-    filter:brightness(0.9) 
+  filter: brightness(0.9);
 }
 
-
-
 .type-secondary {
-    background:   var(--colors-transparent);
-    color: var(--colors-brand-medium-purple);
-    border: 1px solid var(--colors-brand-medium-purple);
-
+  background: var(--colors-transparent);
+  color: var(--colors-brand-medium-purple);
+  border: 1px solid var(--colors-brand-medium-purple);
 }
 
 /* Link  */
 
 .type-tertiary {
-    background: var(--colors-transparent);
-    color: var(--colors-primary);
-    box-shadow: var(--shadows-none);
-    padding: 0;
-    border-bottom: 1px solid var(--colors-primary);
-    border-radius: var(--border-radius-none);
+  background: var(--colors-transparent);
+  color: var(--colors-primary);
+  box-shadow: var(--shadows-none);
+  padding: 0;
+  border-bottom: 1px solid var(--colors-primary);
+  border-radius: var(--border-radius-none);
 }
