add spacer component

--- a/atomic/atoms/Button/Button.css
+++ b/atomic/atoms/Button/Button.css
@@ -4,7 +4,7 @@
   justify-content: center;
   border: 1px solid var(--colors-transparent);
   padding: 10px 20px;
-  border-radius: 30px; /*FIXME use design token*/
+  border-radius: var(--border-radius-lg);
   box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
   cursor: pointer;
   font-size: var(--font-size-2xl);
@@ -18,10 +18,9 @@
   width: 100%;
 }
 .type-primary {
-  background: var(--colors-brand-medium-purple);
+  background: var(--colors-primary);
   color: var(--colors-white);
 }
-
 .button:hover {
   filter: brightness(1.1);
 }
