--- a/atomic/atoms/Button/Button.module.css
+++ b/atomic/atoms/Button/Button.module.css
@@ -13,7 +13,7 @@
   min-width: max-content;
   font-family: var(--font-family-sans);
   font-weight: var(--font-weight-bold);
-  height: 45px;
+  height: var(--input-heigth);
 }
 
 .is-block {
@@ -42,8 +42,9 @@
 .type-tertiary {
   background: var(--color-transparent);
   color: var(--color-primary);
-  box-shadow: var(--shadows-none);
+  box-shadow: var(--box-shadow-none);
   padding: 0;
   border-bottom: 1px solid var(--color-primary);
   border-radius: var(--border-radius-none);
+  height: auto;
 }
