--- a/atomic/layout/Spacer/Spacer.module.css
+++ b/atomic/layout/Spacer/Spacer.module.css
@@ -2,3 +2,13 @@
 .is-visible {
     border: 2px dashed var(--color-primary);
 }
+
+.vertical {
+display: block;
+    height: auto;
+}
+
+.horizontal {
+    display: block;
+    width:100%;
+}
