--- a/styles/main.css
+++ b/styles/main.css
@@ -2,4 +2,10 @@
 html, body {
   font-size: var(--font-size-base);
   font-family: var(--font-family-sans);
+  height: 100%;
+}
+
+
+#__next {
+  height: 100%;
 }
