--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -169,6 +169,7 @@
 	
 	--border-radius-none: 0;
 	--border-radius-sm: 10px;
+	--border-radius-md: 20px;
 	--border-radius-lg: 30px;
 	--border-radius-full: 9999px;
 	
