--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -1,17 +1,19 @@
 :root {
-	--color-brand-medium-purple: #9879e9;
 	--color-brand-slate-blue: #7559d1;
+	--color-brand-medium-purple: #9879e9;
+	--color-brand-blue-moon: #eff1fd;
+	--color-brand-amaranth: #eb2d52;
 	--color-brand-mandy: #eb4e58;
-	--color-brand-white-lilac: #e8e8e8;
-	--color-brand-hint-of-red: #f9f9f9;
-	--color-brand-romance: #fcfdfd;
 	--color-brand-east-bay: #455970;
 	--color-brand-regent-gray: #7e858c;
 	--color-brand-loblolly: #b7b7b7;
-	--color-brand-blue-moon: #eff1fd;
-	--color-transparent: transparent;
-	--color-black: #000;
-	--color-white: #fff;
+	--color-brand-white-lilac: #e8e8e8;
+	--color-brand-hint-of-red: #f9f9f9;
+	--color-brand-romance: #fcfdfd;
+	
+	--color-base-black: #000;
+	--color-base-white: #fff;
+	--color-base-transparent: transparent;
 	
 	--color-gray-100: #f7fafc;
 	--color-gray-200: #edf2f7;
@@ -131,6 +133,7 @@
 	--media-query-max-width-lg: 1199px;
 	
 	--font-family-sans: Quicksand, Arial, sans-serif;
+	--font-family-mono: 'Roboto Mono', 'Courier New', monospace;
 	
 	--font-size-base: 10px;
 	--font-size-xs: 1.1rem;
@@ -157,15 +160,15 @@
 	--line-height-relaxed: 1.625;
 	--line-height-loose: 2;
 	
-	--letter-spacing-tighter: -.05em;
-	--letter-spacing-tight: -.025em;
+	--letter-spacing-tighter: -0.05em;
+	--letter-spacing-tight: -0.025em;
 	--letter-spacing-normal: 0;
-	--letter-spacing-wide: .025em;
-	--letter-spacing-wider: .05em;
-	--letter-spacing-widest: .1em;
+	--letter-spacing-wide: 0.025em;
+	--letter-spacing-wider: 0.05em;
+	--letter-spacing-widest: 0.1em;
 	
 	--box-shadow-none: none;
-	--box-shadow-sm: 0px 4px 5px #e8e8e8;
+	--box-shadow-sm: 0px 4px 5px rgba(0, 0, 0, 0.07);
 	
 	--border-radius-none: 0;
 	--border-radius-sm: 10px;
@@ -174,7 +177,8 @@
 	--border-radius-full: 9999px;
 	
 	--border-width-none: 0;
-	--border-width-default: 1px;
+	--border-width-thin: 1px;
+	--border-width-thick: 2px;
 	
 	--opacity-0: 0;
 	--opacity-25: 0.25;
@@ -191,19 +195,33 @@
 	--z-index-auto: auto;
 	
 	--color-primary: #9879e9;
-	--color-primary-highlight: #eff1fd;
 	--color-primary-muted: #7559d1;
-	--color-secondary: #eb4e58;
+	--color-primary-highlight: #eff1fd;
+	--color-primary-inverted: #fff;
 	--color-font-base: #455970;
-	--color-font-highlight: #b7b7b7;
 	--color-font-muted: #7e858c;
+	--color-font-highlight: #b7b7b7;
+	--color-font-inverted: #fff;
+	--color-secondary: #eb2d52;
+	--color-secondary-muted: #eb4e58;
+	--color-secondary-inverted: #fff;
 	
 	--background-color-primary: #f9f9f9;
-	--background-color-highlight: #fcfdfd;
+	--background-color-primary-highlight: #fcfdfd;
 	
 	--container-max-width: 800px;
 	
 	--button-max-width: 300px;
 	
-	--input-heigth: 38px;
+	--button-border-radius-base: 30px;
+	--button-border-radius-sm: 10px;
+	--button-border-radius-md: 20px;
+	
+	--input-height: 38px;
+	--input-max-width: 400px;
+	--input-background: #fff;
+	--input-border-radius: 30px;
+	--input-font-size: 1.3rem;
+	
+	--picture-border: 1px solid #cbd5e0;
 }
